src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail13.jova
class Test{

    public bool main() {

    return 0;
    }
}

class Main {

  public String main() {

    return 0;
  }

}